# phenotype-shared

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  ADR.md  AGENTS.md  ARCHIVED.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  Makefile  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  clippy.toml  codecov.yml  deny.toml  gitleaks.toml  justfile  package.json  renovate.json5  worklog.md
.agileplus/: worklog.md
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  (+20 more)
crates/phenotype-application/: Cargo.toml
crates/phenotype-application/src/: lib.rs
crates/phenotype-application/src/commands/: mod.rs
crates/phenotype-application/src/handlers/: agent.rs  mod.rs  task.rs  tests.rs
crates/phenotype-cache-adapter/: Cargo.toml
crates/phenotype-cache-adapter/src/: lib.rs
crates/phenotype-cache-adapter/src/adapters/: mod.rs
crates/phenotype-cache-adapter/src/adapters/outbound/: mod.rs
crates/phenotype-cache-adapter/src/adapters/outbound/memory/: in_memory.rs  mod.rs
crates/phenotype-cache-adapter/src/adapters/outbound/metrics/: default.rs  mod.rs
crates/phenotype-cache-adapter/src/application/: mod.rs
crates/phenotype-cache-adapter/src/application/dto/: mod.rs
crates/phenotype-cache-adapter/src/application/use_cases/: mod.rs
crates/phenotype-cache-adapter/src/domain/: mod.rs
crates/phenotype-cache-adapter/src/domain/entities/: mod.rs
crates/phenotype-cache-adapter/src/domain/ports/: mod.rs
crates/phenotype-cache-adapter/src/domain/ports/inbound/: mod.rs
crates/phenotype-cache-adapter/src/domain/ports/outbound/: mod.rs
crates/phenotype-cache-adapter/src/domain/services/: mod.rs
crates/phenotype-config-adapter/: Cargo.toml
crates/phenotype-config-core/: Cargo.toml
crates/phenotype-config-core/src/: lib.rs
crates/phenotype-error-core/: Cargo.toml
crates/phenotype-error-core/src/: envelope.rs  lib.rs
crates/phenotype-event-sourcing/: Cargo.toml
crates/phenotype-event-sourcing/benches/: event_sourcing_bench.rs
crates/phenotype-event-sourcing/src/: error.rs  event.rs  hash.rs  lib.rs  memory.rs  snapshot.rs  store.rs
crates/phenotype-event-sourcing/src/adapters/: mod.rs
crates/phenotype-event-sourcing/src/adapters/outbound/: mod.rs
crates/phenotype-event-sourcing/src/adapters/outbound/inmemory/: mod.rs
crates/phenotype-event-sourcing/src/adapters/outbound/persistence/: mod.rs
crates/phenotype-event-sourcing/src/application/: mod.rs
crates/phenotype-event-sourcing/src/application/dto/: mod.rs
crates/phenotype-event-sourcing/src/application/use_cases/: mod.rs
crates/phenotype-event-sourcing/src/domain/: mod.rs
crates/phenotype-event-sourcing/src/domain/entities/: mod.rs
crates/phenotype-event-sourcing/src/domain/events/: mod.rs
crates/phenotype-event-sourcing/src/domain/ports/: mod.rs
crates/phenotype-event-sourcing/src/domain/ports/inbound/: mod.rs
crates/phenotype-event-sourcing/src/domain/ports/outbound/: mod.rs
crates/phenotype-event-sourcing/src/domain/services/: mod.rs
crates/phenotype-health/: Cargo.toml
crates/phenotype-health/src/: checkers.rs  lib.rs  project.rs  tests.rs
crates/phenotype-http-adapter/: Cargo.toml
crates/phenotype-http-adapter/src/: error.rs  http_client.rs  http_config.rs  lib.rs
crates/phenotype-nanovms-client/: Cargo.toml
crates/phenotype-nanovms-client/src/: cli.rs  client.rs  lib.rs  lib_tests.rs  transport.rs
crates/phenotype-nanovms-client/tests/: integration_tests.rs
crates/phenotype-policy-engine/: Cargo.toml
crates/phenotype-policy-engine/benches/: policy_engine_bench.rs
crates/phenotype-policy-engine/src/: context.rs  engine.rs  error.rs  lib.rs  loader.rs  policy.rs  result.rs  rule.rs
crates/phenotype-port-interfaces/: Cargo.toml
crates/phenotype-port-interfaces/src/: error.rs  lib.rs
crates/phenotype-port-interfaces/src/domain/: aggregate.rs  entity.rs  event.rs  identifier.rs  mod.rs  value_object.rs
crates/phenotype-port-interfaces/src/inbound/: command.rs  event.rs  mod.rs  query.rs
crates/phenotype-port-interfaces/src/outbound/: cache.rs  config.rs  event_bus.rs  filesystem.rs  http.rs  logger.rs  mod.rs  queue.rs  repository.rs
crates/phenotype-port-interfaces/src/shared/: mod.rs  prelude.rs  prelude_inbound.rs  prelude_outbound.rs
crates/phenotype-port-interfaces/src/tests/: unit.rs
crates/phenotype-postgres-adapter/: Cargo.toml  README.md
crates/phenotype-postgres-adapter/src/: error.rs  lib.rs  postgres_config.rs  postgres_repository.rs
crates/phenotype-postgres-adapter/src/adapters/: mod.rs
crates/phenotype-postgres-adapter/src/adapters/outbound/: mod.rs
crates/phenotype-postgres-adapter/src/application/: mod.rs
crates/phenotype-postgres-adapter/src/domain/: mod.rs
crates/phenotype-redis-adapter/: Cargo.toml
crates/phenotype-redis-adapter/src/: error.rs  lib.rs  redis_cache.rs  redis_config.rs
crates/phenotype-redis-adapter/src/adapters/: mod.rs
crates/phenotype-redis-adapter/src/adapters/outbound/: mod.rs
crates/phenotype-redis-adapter/src/application/: mod.rs
crates/phenotype-redis-adapter/src/domain/: mod.rs
crates/phenotype-state-machine/: Cargo.toml
crates/phenotype-state-machine/src/: lib.rs  prelude.rs
crates/phenotype-state-machine/src/adapters/: mod.rs
crates/phenotype-state-machine/src/application/: mod.rs
crates/phenotype-state-machine/src/application/dto/: mod.rs
crates/phenotype-state-machine/src/application/use_cases/: mod.rs
crates/phenotype-state-machine/src/domain/: mod.rs
crates/phenotype-state-machine/src/domain/entities/: mod.rs
crates/phenotype-state-machine/src/domain/ports/: mod.rs
crates/phenotype-state-machine/src/domain/ports/inbound/: mod.rs
crates/phenotype-state-machine/src/domain/ports/outbound/: mod.rs
crates/phenotype-state-machine/src/domain/services/: mod.rs
crates/phenotype-state-machine/tests/unit/: mod.rs
docs/: index.md  package.json
scripts/: ci-local.sh
(+95 files in other folders)
