[workspace]
resolver = "2"
members = [
    "crates/phenotype-policy-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/phenotype-dev/phenotype-shared"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "6.1"
lru = "0.12"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync", "future"] }
toml = "0.8"
regex = "1.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
