[workspace]
resolver = "2"
members = [
    "crates/phenotype-domain",
    "crates/phenotype-event-sourcing",
    "crates/phenotype-cache-adapter",
    "crates/phenotype-policy-engine",
    "crates/phenotype-state-machine",
    "crates/phenotype-port-interfaces",
    "crates/phenotype-postgres-adapter",
    "crates/phenotype-redis-adapter",
    "crates/phenotype-http-adapter",
    "crates/phenotype-application",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/phenotype-dev/phenotype-shared"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dashmap = "6.1"
lru = "0.16"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync", "future"] }
toml = "0.8"
regex = "1.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1.40", features = ["full"] }
tokio-test = "0.4"
validator = { version = "0.20", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-opentelemetry = "0.24"
mockall = "0.13"
