[package]
name = "phenotype-config-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core configuration types and traits for Phenotype crates"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
