[package]
name = "phenotype-error-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Canonical error types and recovery strategies for the Phenotype ecosystem"
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
