[package]
name = "phenotype-event-sourcing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
