[package]
name = "phenotype-health"
version = "0.2.0"
description = "Unified health check abstraction for service health, readiness, and liveness probes"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
