[package]
name = "phenotype-http-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "HTTP client adapter implementing HttpClient port for hexagonal architecture"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Port interfaces
phenotype-port-interfaces = { path = "../phenotype-port-interfaces" }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
