[package]
name = "phenotype-http-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "HTTP client adapter for hexagonal architecture"

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
