[package]
name = "phenotype-policy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic policy evaluation engine for Phenotype, supporting rule-based policy decision-making across all domains"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
dashmap.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
