[package]
name = "phenotype-postgres-adapter"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL adapter for phenotype-port-interfaces Repository port"
license = "MIT"
authors = ["Phenotype Team"]
repository = "https://github.com/KooshaPari/phenotype-shared"
documentation = "https://docs.rs/phenotype-postgres-adapter"
readme = "README.md"

[dependencies]
# Core ports
phenotype-port-interfaces = { path = "../phenotype-port-interfaces", version = "0.1.0" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Database
tokio-postgres = "0.7"
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
