[package]
name = "phenotype-postgres-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "PostgreSQL adapter implementing Repository port for hexagonal architecture"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Port interfaces
phenotype-port-interfaces = { path = "../phenotype-port-interfaces" }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
