[package]
name = "phenotype-redis-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "Redis adapter for hexagonal architecture"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Redis - deadpool-redis 0.14 uses redis 0.24 internally
deadpool-redis = { version = "0.23", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
