[package]
name = "phenotype-state-machine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic finite state machine with transition guards, validation, and forward-only enforcement"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
